--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
         <a href="1.html">тренировка</a>
         <a href="audio.html">музыка</a>
         <a href="7.html">квиз</a>
+        <a href="6.html">мастера</a>
     </body>
 </html>
