--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         <a href="1.html">тренировка</a>
         <a href="audio.html">музыка</a>
         <a href="7.html">квиз</a>
-        
+        <a href="master.html">видео от мастеров</a>
     </body>
 </html>
