--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <a href="audio.html">музыка</a>
         <a href="7.html">квиз</a>
         <a href="master.html">видео от мастеров</a>
+        <a href="https://300.ya.ru/Oy41jguj">история капоэйры</a>
     </body>
 </html>
