--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="7.html">квиз</a>
         <a href="master.html">видео от мастеров</a>
         <a href="https://ru.wikipedia.org/wiki/Капоэйра#История_капоэйры">история капоэйры</a>
-        <img src="https://cdn4.cdn-telegram.org/file/XCE6RVoA-6zRsYyg93QNvnDfkfv2Xcs4x6Hytz0BgTys7WfEMEmd257sp3lrfzj8RBULsG5i2b1jV4zfRADziasbTlD-ZOZ0n8yHudImjRw6eDhMKChm_47y0TkjTAPav8zXjQ13AYubF4vB6S-bgwzuZQGNd3cF481PZB0Et0o5YBStG3dYC4ZIXtOsx_RT7GMJdBwKNXu8T2Yfhfx-VjqeLBFC5Z8gTmg2zlmHRJkA7WerYiEeFvbh3AHT9z-po6uwL8-iXW8HAAfRhRBNRp7tyFzyIwVWT1TTHxHjNhW8XQgeWgKT0KDU7i6JBFmCGvWpt9hgr8UkMdcKqHY2pQ.jpg">
+        <img src="https://sasha-svg320.github.io/photo_2025-02-04%2018.19.53.jpeg">
     </body>
     <p>спасибо https://t.me/real_capoeira/135</p>
 </html>
