--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <script src=»https://www.google.com/recaptcha/api.js»></script>
+        
     <title>1515sa</title>
     
     <style>
@@ -36,7 +36,7 @@
         <h1>1515sa</h1>
         <a href="https://scratch.mit.edu/users/1515sa/">scratch</a>
         <a href="capoeira.html">старая версия</a>
-    <div class=»g-recaptcha» data-sitekey=»6LeNpAcrAAAAABMvX9reWb-WJmqdseGLCaZYWSUl»></div>
+       <a href="Draw.html">Рисуй</a>
     </body>
     <p></p>
 </html>
