--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <a href="https://scratch.mit.edu/users/1515sa/">scratch</a>
         <a href="capoeira.html">старая версия</a>
        <a href="Draw.html">Рисуй</a>
+        <a href="chat2.0.html">Чат</a>
     </body>
     <p></p>
 </html>
