--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="capoeira.html">старая версия</a>
        <a href="Draw.html">Рисуй</a>
         <a href="chat2.0.html">Чат</a>
+        <a href="mathematical_examples.html">Примеры на JS</a>
     </body>
     <p></p>
 </html>
