--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
        <a href="Draw.html">Рисуй</a>
         <a href="chat2.0.html">Чат</a>
         <a href="mathematical_examples.html">Примеры на JS</a>
+        <a href="CatsByMeowfacts.html">Факты про котиков от Meowfacts</a>
     </body>
     <p></p>
 </html>
