--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <a href="chat2.0.html">Чат</a>
         <a href="mathematical_examples.html">Примеры на JS</a>
         <a href="CatsByMeowfacts.html">Факты про котиков от Meowfacts</a>
+        <a href="Catsl.html">Факты про котиков от Catfact.ninja</a>
+        <a href="CatsI.html">Факты про котиков от local</a>
     </body>
     <p></p>
 </html>
