--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
        <a href="Draw.html">Рисуй</a>
         <a href="chat2.0.html">Чат</a>
         <a href="mathematical_examples.html">Примеры на JS</a>
-        <a href="CatsByMeowfacts.html">Факты про котиков от Meowfacts</a>
-        <a href="Catsl.html">Факты про котиков от Catfact.ninja</a>
-        <a href="CatsI.html">Факты про котиков от local</a>
+        <a href="CatsFacts.html">Факты про котиков</a>
     </body>
     <p></p>
 </html>
